One attempt at parallelization

--- a/Group24_Exercise1.ipynb
+++ b/Group24_Exercise1.ipynb
@@ -145,7 +145,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kZn0Ch8f685c",
-        "outputId": "7cae749b-d2ad-4428-d023-7c62078ce79b"
+        "outputId": "3e5069bb-1e1f-4bd1-ead3-ef4f59b6d8c2"
       },
       "source": [
         "import pandas\n",
@@ -153,9 +153,13 @@
         "from sklearn import metrics\n",
         "from matplotlib import pyplot as plt\n",
         "from google.colab import drive\n",
-        "drive.mount(\"/content/gdrive\")"
+        "drive.mount(\"/content/gdrive\")\n",
+        "\n",
+        "from mxnet import np, npx\n",
+        "from d2l import mxnet as d2l\n",
+        "npx.set_np()"
       ],
-      "execution_count": 26,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
@@ -1583,7 +1587,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0sVup-I3e8e3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0sVup-I3e8e3",
+        "outputId": "0f6cb8cc-6c20-4344-811f-39d894b59385"
       },
       "source": [
         "from sklearn.neural_network import MLPClassifier\n",
@@ -1591,20 +1599,35 @@
         "scores_1 = {}\n",
         "scores_2 = {}\n",
         "\n",
-        "for n_neurons in range(150, 750, 10):\n",
-        "  multi_layer_perceptron = MLPClassifier(solver='lbfgs', random_state=123, hidden_layer_sizes=(n_neurons,))\n",
+        "def fit_multilayer_perceptron(hidden_layer_sizes, X_train, y_train, X_test, y_test):\n",
+        "  multi_layer_perceptron = MLPClassifier(solver='lbfgs', random_state=123, hidden_layer_sizes=hidden_layer_sizes)\n",
         "  multi_layer_perceptron.fit(X_train, y_train)\n",
         "  y_pred = multi_layer_perceptron.predict(X_test)\n",
-        "  scores_1[n_neurons] = metrics.accuracy_score(y_test, y_pred)\n",
+        "  return metrics.accuracy_score(y_test, y_pred)\n",
         "\n",
-        "for n_neurons in range(150, 750, 10):\n",
-        "  multi_layer_perceptron = MLPClassifier(solver='lbfgs', random_state=123, hidden_layer_sizes=(n_neurons,n_neurons,))\n",
-        "  multi_layer_perceptron.fit(X_train, y_train)\n",
-        "  y_pred = multi_layer_perceptron.predict(X_test)\n",
-        "  scores_2[n_neurons] = metrics.accuracy_score(y_test, y_pred)"
+        "devices = d2l.try_all_gpus()\n",
+        "with d2l.Benchmark(\"Neural network on multiple CPU\"):\n",
+        "  fit_multilayer_perceptron((20,), X_train, y_train, X_test, y_test)\n",
+        "  fit_multilayer_perceptron((20,), X_train, y_train, X_test, y_test)\n",
+        "\n",
+        "with d2l.Benchmark(\"Neural network on single CPU 1\"):\n",
+        "  fit_multilayer_perceptron((20,), X_train, y_train, X_test, y_test)\n",
+        "\n",
+        "with d2l.Benchmark(\"Neural network on single CPU 2\"):\n",
+        "  fit_multilayer_perceptron((20,), X_train, y_train, X_test, y_test)"
       ],
-      "execution_count": 72,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Neural network on multiple CPU: 4.9002 sec\n",
+            "Neural network on single CPU 1: 2.4403 sec\n",
+            "Neural network on single CPU 2: 2.4650 sec\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
