Hopefully working parallel training

--- a/Group24_Exercise1.ipynb
+++ b/Group24_Exercise1.ipynb
@@ -310,7 +310,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 456
+          "height": 460
         },
         "id": "B4oVQ0LTGNod",
         "outputId": "8dad61d3-6e72-4018-9c1f-263f8149d7d2"
@@ -1405,7 +1405,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 254
         },
         "id": "dpkgS5asK0Kz",
         "outputId": "05deb7fb-f156-48ba-a306-df84be006588"
@@ -1537,17 +1537,13 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 231
+          "base_uri": "https://localhost:8080/"
         },
         "id": "0sVup-I3e8e3",
-        "outputId": "ab08a74e-f199-47ae-ae56-a8e46cd086f4"
+        "outputId": "25149951-f7fc-4d7b-d367-b82fc57b9d64"
       },
       "source": [
         "from sklearn.neural_network import MLPClassifier\n",
-        "\n",
-        "scores_1 = {}\n",
-        "scores_2 = {}\n",
         "\n",
         "def fit_multilayer_perceptron(n_layers, n_neurons, X_train, y_train, X_test, y_test, queue):\n",
         "  multi_layer_perceptron = MLPClassifier(solver='lbfgs', \n",
@@ -1566,34 +1562,184 @@
         "                args=(n_layers, n_neurons, X_train, y_train, X_test, y_test, queue))\n",
         "    p.start()\n",
         "    ps.append(p)\n",
+        "    print(\"Spawned process {}\".format(p.pid))\n",
         "\n",
         "arr = []\n",
         "\n",
-        "any_alive = True\n",
         "while len(ps) > 0:\n",
-        "  to_remove = []\n",
-        "  for i, p in enumerate(ps):\n",
+        "  pids = []\n",
+        "  for p in ps:\n",
         "    if not p.is_alive():\n",
-        "      to_remove.append(i)\n",
         "      arr.append(queue.get())\n",
-        "  #print(\"Removing {}\".format(to_remove))\n",
-        "  for i in to_remove.sort(reverse=True):\n",
-        "    ps.pop(i)\n",
+        "      pids.append(p.pid)\n",
+        "      print(\"Removed process {}\".format(p.pid))\n",
+        "  ps = list(filter(lambda p: p.pid not in pids, ps))\n",
         "  time.sleep(1)\n",
         "\n",
         "df_neural_netowrk_res = pandas.DataFrame.from_records(arr, columns=[\"n_layers\", \"n_neurons\", \"accurancy\"])"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-45-5f2a237f75c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m       \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqueue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m   \u001b[0;31m#print(\"Removing {}\".format(to_remove))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mto_remove\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m     \u001b[0mps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m   \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Spawned process 7160\n",
+            "Spawned process 7161\n",
+            "Spawned process 7162\n",
+            "Spawned process 7163\n",
+            "Spawned process 7164\n",
+            "Spawned process 7165\n",
+            "Spawned process 7167\n",
+            "Spawned process 7168\n",
+            "Spawned process 7169\n",
+            "Spawned process 7171\n",
+            "Spawned process 7172\n",
+            "Spawned process 7173\n",
+            "Spawned process 7174\n",
+            "Spawned process 7176\n",
+            "Spawned process 7178\n",
+            "Spawned process 7180\n",
+            "Spawned process 7181\n",
+            "Spawned process 7184\n",
+            "Spawned process 7186\n",
+            "Spawned process 7188\n",
+            "Spawned process 7189\n",
+            "Spawned process 7192\n",
+            "Spawned process 7194\n",
+            "Spawned process 7196\n",
+            "Spawned process 7197\n",
+            "Spawned process 7200\n",
+            "Spawned process 7202\n",
+            "Spawned process 7204\n",
+            "Spawned process 7206\n",
+            "Spawned process 7208\n",
+            "Spawned process 7210\n",
+            "Spawned process 7213\n",
+            "Spawned process 7216\n",
+            "Spawned process 7218\n",
+            "Spawned process 7221\n",
+            "Spawned process 7222\n",
+            "Spawned process 7225\n",
+            "Spawned process 7228\n",
+            "Spawned process 7229\n",
+            "Spawned process 7232\n",
+            "Spawned process 7234\n",
+            "Spawned process 7236\n",
+            "Spawned process 7238\n",
+            "Spawned process 7240\n",
+            "Spawned process 7241\n",
+            "Spawned process 7244\n",
+            "Spawned process 7245\n",
+            "Spawned process 7248\n",
+            "Spawned process 7250\n",
+            "Spawned process 7252\n",
+            "Spawned process 7253\n",
+            "Spawned process 7256\n",
+            "Spawned process 7258\n",
+            "Spawned process 7259\n",
+            "Spawned process 7262\n",
+            "Spawned process 7264\n",
+            "Spawned process 7267\n",
+            "Spawned process 7269\n",
+            "Spawned process 7272\n",
+            "Spawned process 7273\n",
+            "Spawned process 7277\n",
+            "Spawned process 7279\n",
+            "Spawned process 7281\n",
+            "Spawned process 7284\n",
+            "Spawned process 7285\n",
+            "Spawned process 7287\n",
+            "Spawned process 7289\n",
+            "Spawned process 7292\n",
+            "Spawned process 7294\n",
+            "Spawned process 7296\n",
+            "Spawned process 7299\n",
+            "Spawned process 7302\n",
+            "Spawned process 7305\n",
+            "Spawned process 7308\n",
+            "Spawned process 7310\n",
+            "Spawned process 7313\n",
+            "Spawned process 7314\n",
+            "Spawned process 7316\n",
+            "Spawned process 7319\n",
+            "Spawned process 7321\n",
+            "Spawned process 7323\n",
+            "Spawned process 7325\n",
+            "Spawned process 7327\n",
+            "Spawned process 7331\n",
+            "Spawned process 7334\n",
+            "Spawned process 7338\n",
+            "Spawned process 7341\n",
+            "Spawned process 7344\n",
+            "Spawned process 7346\n",
+            "Spawned process 7348\n",
+            "Spawned process 7351\n",
+            "Spawned process 7354\n",
+            "Spawned process 7357\n",
+            "Spawned process 7361\n",
+            "Spawned process 7363\n",
+            "Spawned process 7366\n",
+            "Spawned process 7369\n",
+            "Spawned process 7373\n",
+            "Spawned process 7375\n",
+            "Spawned process 7377\n",
+            "Spawned process 7378\n",
+            "Spawned process 7385\n",
+            "Spawned process 7388\n",
+            "Spawned process 7390\n",
+            "Spawned process 7391\n",
+            "Spawned process 7395\n",
+            "Spawned process 7399\n",
+            "Spawned process 7402\n",
+            "Spawned process 7405\n",
+            "Spawned process 7409\n",
+            "Spawned process 7413\n",
+            "Spawned process 7416\n",
+            "Spawned process 7419\n",
+            "Spawned process 7421\n",
+            "Spawned process 7422\n",
+            "Spawned process 7425\n",
+            "Spawned process 7430\n",
+            "Spawned process 7433\n",
+            "Spawned process 7439\n",
+            "Spawned process 7441\n",
+            "Spawned process 7445\n",
+            "Spawned process 7450\n",
+            "Spawned process 7453\n",
+            "Spawned process 7458\n",
+            "Spawned process 7460\n",
+            "Spawned process 7461\n",
+            "Spawned process 7465\n",
+            "Spawned process 7477\n",
+            "Spawned process 7479\n",
+            "Spawned process 7484\n",
+            "Spawned process 7487\n",
+            "Spawned process 7491\n",
+            "Spawned process 7497\n",
+            "Spawned process 7499\n",
+            "Spawned process 7503\n",
+            "Spawned process 7507\n",
+            "Spawned process 7510\n",
+            "Spawned process 7511\n",
+            "Spawned process 7514\n",
+            "Spawned process 7516\n",
+            "Spawned process 7518\n",
+            "Spawned process 7520\n",
+            "Spawned process 7524\n",
+            "Spawned process 7526\n",
+            "Spawned process 7528\n",
+            "Spawned process 7533\n",
+            "Spawned process 7537\n",
+            "Spawned process 7540\n",
+            "Spawned process 7541\n",
+            "Spawned process 7544\n",
+            "Spawned process 7547\n",
+            "Spawned process 7550\n",
+            "Spawned process 7551\n",
+            "Spawned process 7552\n",
+            "Spawned process 7554\n",
+            "Spawned process 7558\n"
           ]
         }
       ]
@@ -1605,23 +1751,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "atLJRb4LDAG0",
-        "outputId": "d00016fc-0915-422d-c4de-434744ec7f8b"
+        "outputId": "57e2ae93-5ebd-474b-e0a4-3716a2bd690d"
       },
       "source": [
         "with pandas.option_context('display.max_rows', None, 'display.max_columns', None):\n",
         "    print(df_neural_netowrk_res)"
       ],
-      "execution_count": 41,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   n_layers  n_neurons  accurancy\n",
-            "0         1         30    0.68000\n",
-            "1         1         20    0.63875\n",
-            "2         2         30    0.63500\n",
-            "3         2         20    0.59125\n"
+            "    n_layers  n_neurons  accurancy\n",
+            "0          1         30    0.68000\n",
+            "1          1         50    0.70000\n",
+            "2          1         60    0.71500\n",
+            "3          1         70    0.70375\n",
+            "4          1         40    0.68875\n",
+            "5          1         80    0.74125\n",
+            "6          1         20    0.63875\n",
+            "7          1         90    0.72000\n",
+            "8          2         50    0.67375\n",
+            "9          2         40    0.64375\n",
+            "10         2         30    0.63500\n",
+            "11         2         20    0.59125\n",
+            "12         2         60    0.68750\n",
+            "13         2         70    0.71125\n",
+            "14         2         90    0.72625\n",
+            "15         2         80    0.68625\n"
           ]
         }
       ]
@@ -1631,7 +1789,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 299
+          "height": 301
         },
         "id": "9P-JoOT-ArLm",
         "outputId": "d1e16cdc-ac59-4d27-9f23-93458ec47430"
@@ -1753,17 +1911,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Vc1ZUxbxSkNs"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3Sy1lQnINSQ-"
@@ -1836,17 +1983,6 @@
         "                                         metrics.recall_score(y_test, y_pred),\n",
         "                                         metrics.specificity_score(y_test, y_pred),\n",
         "                                         metrics.f1_score(y_test, y_pred)])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7tOcP_3lSro7"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
